feat: added docs for get item by psgcCode
