# internal/api/cities.go
@@ -98,6 +98,18 @@ func (rs cityResource) List(w http.ResponseWriter, r *http.Request) {
 	w.Write(res)
 }
 
+// ShowCities godoc
+//	@Summary		Show an cities
+//	@Description	get string by PsgcCode
+//	@Tags			cities
+//	@Accept			json
+//	@Produce		json
+//	@Param			psgcCode	path		string true	"City PsgcCode"
+//	@Success		200			{object}	generator.GeographicArea
+//	@Failure		400			{object}	string	"Bad Request"
+//	@Failure		400			{object}	string	"Item Not Found"
+//	@Failure		500			{object}	string	"Internal Server Error"
+//	@Router			/cities/{psgcCode} [get]
 func (rs cityResource) Get(w http.ResponseWriter, r *http.Request) {
 	// Get the context from the request
 	ctx := r.Context()
